Fix typos in CMake list files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,9 +74,9 @@ elseif (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/wrparse/)
         include(${WRPARSE_BUILD_DIR}/wrparse-config-internal.cmake)
 elseif (UNIX)
         if (EXISTS /usr/share/wrparse/wrparse-targets.cmake)
-                set(WRUTIL_ROOT /usr)
+                set(WRPARSE_ROOT /usr)
         elseif (EXISTS /usr/local/share/wrparse/wrparse-targets.cmake)
-                set(WRUTIL_ROOT /usr/local)
+                set(WRPARSE_ROOT /usr/local)
         endif()
 endif()
 
