--- a/cmake/wrparsecxx-config-internal.cmake.in
+++ b/cmake/wrparsecxx-config-internal.cmake.in
@@ -2,7 +2,7 @@ set(WRPARSECXX_VERSION_MAJOR @WRPARSECXX_VERSION_MAJOR@)
 set(WRPARSECXX_VERSION_MINOR @WRPARSECXX_VERSION_MINOR@)
 set(WRPARSECXX_VERSION_PATCH @WRPARSECXX_VERSION_PATCH@)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(@CMAKE_CURRENT_SOURCE_DIR@/include)
 
 # for check_cxx_*() functions
-list(APPEND CMAKE_REQUIRED_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include)
+list(APPEND CMAKE_REQUIRED_INCLUDES @CMAKE_CURRENT_SOURCE_DIR@/include)
